[gd_scene load_steps=11 format=2]

[ext_resource path="res://Game.gd" type="Script" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Zoom.gd" type="Script" id=3]
[ext_resource path="res://sfx/flame.ogg" type="AudioStream" id=4]
[ext_resource path="res://UI.gd" type="Script" id=5]
[ext_resource path="res://font.tres" type="DynamicFont" id=6]
[ext_resource path="res://GameOver.gd" type="Script" id=7]
[ext_resource path="res://gfx/Button.png" type="Texture" id=8]
[ext_resource path="res://gfx/Button_down.png" type="Texture" id=9]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 64.65, 64 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Chars" type="Node2D" parent="."]
position = Vector2( 54.1354, 194.975 )

[node name="Player" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="Player"]
current = true
zoom = Vector2( 1.21, 1 )
script = ExtResource( 3 )

[node name="Duplicate" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 4 )

[node name="UI" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[node name="Panel" type="Panel" parent="UI"]
margin_right = 166.34
margin_bottom = 282.74
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="UI/Panel"]
margin_left = 10.0
margin_top = 10.0
margin_right = 183.0
margin_bottom = 278.0
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Panel/GridContainer"]
margin_right = 93.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 6 )
text = "Us"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Us" type="Label" parent="UI/Panel/GridContainer"]
margin_left = 97.0
margin_right = 139.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 6 )
text = "42"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label2" type="Label" parent="UI/Panel/GridContainer"]
margin_top = 68.0
margin_right = 93.0
margin_bottom = 132.0
custom_fonts/font = ExtResource( 6 )
text = "Splits"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Splits" type="Label" parent="UI/Panel/GridContainer"]
margin_left = 97.0
margin_top = 68.0
margin_right = 139.0
margin_bottom = 132.0
custom_fonts/font = ExtResource( 6 )
text = "42"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label3" type="Label" parent="UI/Panel/GridContainer"]
margin_top = 136.0
margin_right = 93.0
margin_bottom = 200.0
custom_fonts/font = ExtResource( 6 )
text = "Save"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Goal" type="Label" parent="UI/Panel/GridContainer"]
margin_left = 97.0
margin_top = 136.0
margin_right = 139.0
margin_bottom = 200.0
custom_fonts/font = ExtResource( 6 )
text = "42"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label4" type="Label" parent="UI/Panel/GridContainer"]
margin_top = 204.0
margin_right = 93.0
margin_bottom = 268.0
custom_fonts/font = ExtResource( 6 )
text = "Level"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Level" type="Label" parent="UI/Panel/GridContainer"]
margin_left = 97.0
margin_top = 204.0
margin_right = 139.0
margin_bottom = 268.0
custom_fonts/font = ExtResource( 6 )
text = "42"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="GameOver" type="Panel" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -286.025
margin_top = -81.925
margin_right = 286.025
margin_bottom = 81.925
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -209.0
margin_top = -69.0
margin_right = 209.0
margin_bottom = 73.0

[node name="Label" type="Label" parent="UI/GameOver/VBoxContainer"]
margin_right = 418.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 6 )
text = "You finished with x clones"

[node name="HBoxContainer" type="HBoxContainer" parent="UI/GameOver/VBoxContainer"]
margin_top = 68.0
margin_right = 418.0
margin_bottom = 138.0
custom_constants/separation = 20
alignment = 1

[node name="Again" type="Button" parent="UI/GameOver/VBoxContainer/HBoxContainer"]
margin_left = 29.0
margin_right = 190.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 6 )
text = "Try again"

[node name="Next" type="Button" parent="UI/GameOver/VBoxContainer/HBoxContainer"]
margin_left = 210.0
margin_right = 389.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 6 )
text = "Next Level"

[node name="Pause" type="Panel" parent="UI"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -286.025
margin_top = -81.925
margin_right = 286.025
margin_bottom = 81.925
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Pause"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -136.5
margin_top = -38.0
margin_right = 136.5
margin_bottom = 38.0

[node name="Label" type="Label" parent="UI/Pause/VBoxContainer"]
margin_right = 273.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 6 )
text = "Press W to start"

[node name="Control" type="Control" parent="UI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -239.0
margin_top = -207.0

[node name="TouchScreenButton" type="TouchScreenButton" parent="UI/Control"]
normal = ExtResource( 8 )
pressed = ExtResource( 9 )
shape = SubResource( 1 )
action = "key_split"
visibility_mode = 1
[connection signal="pressed" from="UI/GameOver/VBoxContainer/HBoxContainer/Again" to="." method="_on_Again_pressed"]
[connection signal="pressed" from="UI/GameOver/VBoxContainer/HBoxContainer/Next" to="." method="_on_Next_pressed"]
